Background-image added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins& display=swap" rel="stylesheet">
 </head>
-<body>
+<body><h3>Home|About Us|Visa Section |    Reviews|    Contact us</h3>
+    <div class="header-side">
+        <h1>Get Verifiable Flight Reservation For Visa Application</h1>
+        <h3 class="middle-text">Benefit:</h3>
+        <h3 class="middle-text">30 Minutes Delivery | World Wide Accepted | 24*7 Support</h3>
+        <h3 class="middle-text">FREE NOC | FREE Cover Letter | Join Free affiliate program.</h3></div>
     
 </body>
 </html>
