--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins& display=swap" rel="stylesheet">
 </head>
-<body><h3>Home|About Us|Visa Section |    Reviews|    Contact us</h3>
+<body><h3 class="Header-text">Home|About Us|Visa Section |    Reviews|    Contact us</h3>
     <div class="header-side">
         <h1>Get Verifiable Flight Reservation For Visa Application</h1>
         <h3 class="middle-text">Benefit:</h3>
         <h3 class="middle-text">30 Minutes Delivery | World Wide Accepted | 24*7 Support</h3>
         <h3 class="middle-text">FREE NOC | FREE Cover Letter | Join Free affiliate program.</h3></div>
+    <h3 id="lower-middle-text">What We Offer 24/7 days a week</h3>    
     
 </body>
 </html>
